<resources>
    <string name="app_name">Clinic</string>
    <string name="autorization">Авторизация</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="entrance">Вход</string>
    <string name="account">Если у вас нет учетной записи,</string>
    <string name="registration">зарегистрируйтесь</string>
    <string name="registration2">Регистрация</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="number">Телефон</string>
    <string name="personal_dan">Нажимая кнопку «Зарегистрироваться», я подтверждаю свою дееспособность, согласие на получение информации об оформлении и получении заказа, согласие на обработку персональных данных в соответствии с указанным</string>
    <string name="here">здесь</string>
    <string name="text">текстом</string>

    <string name="new_name">Новое имя</string>
    <string name="new_surname">Новая фамилия</string>
    <string name="new_password">Новый пароль</string>
    <string name="save_changes">Сохранить изменения</string>

    <string name="clara">Клара</string>
    <string name="ageclara">6 лет</string>
    <string name="indicators">Основные показатели:</string>
    <string name="changeData">Изменить данные</string>
    <string name="temperature">Температура:</string>
    <string name="pressure">Давление:</string>
    <string name="heartRate">ЧСС:</string>
    <string name="breath">Частота дыхания:</string>
    <string name="example_email">masha@mail.com</string>
    <string name="go_back">Вернуться назад</string>
    <string name="edit_text">Редактировать</string>
    <string name="logout">Выйти</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="temp_choose">Температура</string>
    <string name="chss">ЧСС</string>
    <string name="pressure_choose">Давление</string>
    <string name="breath_frequency">Частота дыхания</string>
    <string name="day">День</string>
    <string name="week">Неделя</string>
    <string name="month">Месяц</string>
    <string name="renew_data">Обновить данные</string>
    <string name="regVet">Регистрацию производит ветеринар</string>
    <string name="address">Москва, ул.Михалковская, 63Б ст4</string>
    <string name="phoneNum">+7(495)154-49-56</string>
    <string name="city">Город</string>
    <string name="changePet">Изменить питомца</string>
</resources>