<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/autorization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotomedium"
        android:text="@string/registration2"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <EditText
        android:id="@+id/EmailAddress"
        android:layout_width="382dp"
        android:layout_height="48dp"
        android:background="@drawable/edittext_bg_rounded"
        android:ems="10"
        android:fontFamily="@font/robotomedium"
        android:gravity="start|center_vertical"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autorization"
        app:layout_constraintVertical_bias="0.056"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/password"
        android:layout_width="382dp"
        android:layout_height="48dp"
        android:background="@drawable/edittext_bg_rounded"
        android:ems="10"
        android:fontFamily="@font/robotomedium"
        android:gravity="start|center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number"
        app:layout_constraintVertical_bias="0.063"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/name"
        android:layout_width="382dp"
        android:layout_height="48dp"
        android:background="@drawable/edittext_bg_rounded"
        android:ems="10"
        android:fontFamily="@font/robotomedium"
        android:gravity="start|center_vertical"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingStart="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailAddress"
        app:layout_constraintVertical_bias="0.038"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="382dp"
        android:layout_height="48dp"
        android:background="@drawable/edittext_bg_rounded"
        android:ems="10"
        android:fontFamily="@font/robotomedium"
        android:gravity="start|center_vertical"
        android:hint="@string/surname"
        android:inputType="text"
        android:paddingStart="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.046"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/number"
        android:layout_width="382dp"
        android:layout_height="48dp"
        android:background="@drawable/edittext_bg_rounded"
        android:ems="10"
        android:fontFamily="@font/robotomedium"
        android:gravity="start|center_vertical"
        android:hint="@string/number"
        android:inputType="phone"
        android:paddingStart="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surname"
        app:layout_constraintVertical_bias="0.054"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/entrance"
        android:layout_width="382dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/robotomedium"
        android:text="@string/registration2"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.222" />

    <View
        android:id="@+id/view2"
        android:layout_width="390dp"
        android:layout_height="1sp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entrance"
        app:layout_constraintVertical_bias="0.166" />

    <TextView
        android:id="@+id/account"
        android:layout_width="360dp"
        android:layout_height="74dp"
        android:fontFamily="@font/robotomedium"
        android:text="@string/personal_dan"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.254"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="0.479" />

    <TextView
        android:id="@+id/registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotomedium"
        android:text="@string/text"
        android:textColor="@color/green"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="0.622" />

</androidx.constraintlayout.widget.ConstraintLayout>