<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/new_name"
        android:layout_width="382dp"
        android:layout_height="44dp"
        android:layout_marginBottom="360dp"
        android:background="@drawable/edittext_bg_rounded"
        android:ems="10"
        android:fontFamily="@font/robotomedium"
        android:gravity="start|center_vertical"
        android:hint="@string/new_name"
        android:inputType="text"
        android:paddingStart="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf=""
        app:layout_constraintVertical_bias="0.063"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/new_surname"
        android:layout_width="382dp"
        android:layout_height="44dp"
        android:layout_marginBottom="300dp"
        android:background="@drawable/edittext_bg_rounded"
        android:ems="10"
        android:fontFamily="@font/robotomedium"
        android:gravity="start|center_vertical"
        android:hint="@string/new_surname"
        android:inputType="text"
        android:paddingStart="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_name"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="382dp"
        android:layout_height="44dp"
        android:layout_marginBottom="240dp"
        android:background="@drawable/edittext_bg_rounded"
        android:ems="10"
        android:fontFamily="@font/robotomedium"
        android:gravity="start|center_vertical"
        android:hint="@string/new_password"
        android:inputType="text"
        android:paddingStart="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_surname"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/entrance"
        android:layout_width="382dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/robotomedium"
        android:text="@string/save_changes"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_password"
        app:layout_constraintVertical_bias="0.222" />



</androidx.constraintlayout.widget.ConstraintLayout>