<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <View
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:background="@drawable/rounded_bottom_corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/dog"
        android:layout_width="40dp"
        android:layout_height="45dp"
        app:layout_constraintBottom_toBottomOf="@+id/top"
        app:layout_constraintEnd_toStartOf="@+id/heart"
        app:layout_constraintStart_toStartOf="@+id/top"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dog" />

    <ImageView
        android:id="@+id/heart"
        android:layout_width="40dp"
        android:layout_height="45dp"
        app:layout_constraintBottom_toBottomOf="@+id/top"
        app:layout_constraintEnd_toEndOf="@+id/top"
        app:layout_constraintStart_toStartOf="@+id/top"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/heart" />

    <ImageView
        android:id="@+id/settings"
        android:layout_width="40dp"
        android:layout_height="45dp"
        app:layout_constraintBottom_toBottomOf="@+id/top"
        app:layout_constraintEnd_toEndOf="@+id/top"
        app:layout_constraintStart_toEndOf="@+id/heart"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings" />


    <Button
        android:id="@+id/go_back"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/grey"
        android:fontFamily="@font/robotomedium"
        android:text="@string/go_back"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top"
        app:layout_constraintVertical_bias="0.037" />

    <ImageView
        android:id="@+id/circular_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/rounded_image_bg"
        android:scaleType="centerCrop"
        android:src="@drawable/cat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.283" />

    <TextView
        android:id="@+id/example_email"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginBottom="512dp"
        android:background="@drawable/edittext_bg_rounded_grey"
        android:ems="10"
        android:fontFamily="@font/robotomedium"
        android:gravity="center"
        android:inputType="text"
        android:paddingStart="@dimen/zero_padding"
        android:text="@string/example_email"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.063"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/example_name"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginBottom="464dp"
        android:background="@drawable/edittext_bg_rounded_grey"
        android:ems="10"
        android:fontFamily="@font/robotomedium"
        android:gravity="center"
        android:inputType="text"
        android:paddingStart="@dimen/zero_padding"
        android:text="@string/clara"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.063"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/entrance"
        android:layout_width="382dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/robotomedium"
        android:text="@string/edit_text"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circular_image"
        app:layout_constraintVertical_bias="0.158" />

    <Button
        android:id="@+id/logout"
        android:layout_width="382dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/robotomedium"
        android:text="@string/logout"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circular_image"
        app:layout_constraintVertical_bias="0.349" />

    <Button
        android:id="@+id/save_data"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/robotomedium"
        android:text="@string/delete_account"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout"
        app:layout_constraintVertical_bias="0.553" />

</androidx.constraintlayout.widget.ConstraintLayout>